stylesheets/portfolio.css
  .profilePhoto {
    display: block;
    padding: 1vw;
    max-width: 50%;
    width: auto;
    height: auto;
    margin: auto;
  }
  
  .greyColorBackground {
    background-color: #f3f3f3;
  }
  
  .greyText {
    color :#767777;
  }
  
  .profileBackground {
    background: url('../images/technology.jpg');
    background-size: 100%;
  }
  
  .centerStage {
    margin: 10px auto;
  }
  
  .demo-card-wide.mdl-card {
    width: 500px;
  }
  
  .demo-card-wide > .mdl-card__pieTitle {
    color: #fff;
    height: 256px;
    background: url('../images/FeatGraphicPieYourFriends.png');
    background-size: 100% 100%;
    background-repeat: no-repeat;
    clip:auto;
  }
  
  .demo-card-wide > .mdl-card__timerTitle {
    color: #fff;
    height: 256px;
    background: url('../images/FeatureGraphicBehavioralTimer.png');
    background-size: 100% 100%;
    background-repeat: no-repeat;
    clip:auto;
  }
  
  .demo-card-wide > .mdl-card__kingsTitle {
    color: #fff;
    height: 256px;
    background: url('../images/FeatureGraphicKingsCup.png');
    background-size: 100% 100%;
    background-repeat: no-repeat;
    clip:auto;
  }
  
  
  .demo-card-wide > .mdl-card__iiwiiTitle {
    color: #fff;
    height: 256px;
    background: url('../images/FeatGraphicIIWII.png');
    background-size: 100% 100%;
    background-repeat: no-repeat;
    clip:auto;
  }
  
  .demo-card-wide > .mdl-card__menu {
    color: #fff;
  }
  
  .centerStage {
    margin: 10px auto;
  }
  
  .demo-layout-waterfall .mdl-layout__header-row .mdl-navigation__link:last-of-type {
    padding-right: 0;
  }
  
  .viewportFullscreen {
    height: 75vh;
    position: relative;
  }
  
  
  .verticalCenter {
    top: 50%;
    position: relative;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }
  
  .italics {
    font-style: italic;
    margin:auto;
  }
  
  .bottomBarrel {
    position: absolute;
    margin:auto;
    bottom: 0;
    width: 100%;
  }

